--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.8"
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.8",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
