--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
+    "swiper": "^11.1.1",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
